Add diagnostic suggestion for MemoryLeakTest failing in IDE
Test: This is it
Bug: None
Change-Id: I3dc21b05b6fdf7b284ca32cb7a2effc5a7ce5ef8